[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-strong-passwords"
dynamic = ["version"]
description = "A Django reusable app that provides validators and a form field that checks the strength of a password"
readme = "README.rst"
license = { text = "BSD" }
authors = [
    { name = "Brandon Helwig", email = "django-strong-passwords@brandonhelwig.com" }
]
requires-python = ">=3.10"
dependencies = [
    "Django>=3.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Framework :: Django",
]

[project.urls]
Homepage = "https://github.com/brhelwig/django-strong-passwords/"

[tool.hatch.version]
path = "passwords/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "passwords/",
    "README.rst",
]

[tool.hatch.build.targets.wheel]
packages = ["passwords"]

[dependency-groups]
dev = [
    "bandit",
    "black",
    "coverage",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
]
